--- a/Cargo.toml
+++ b/Cargo.toml
@@ -7,6 +7,7 @@ edition = "2021"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
-num-complex = "0.3.1"
+lazy_static = "1.4.0"
+num-complex = "0.4.0"
 num-integer = "0.1.44"
 regex = "1.4.2"
